--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "~4.16.1",
     "express-openapi": "^12.0.2",
     "morgan": "~1.9.1",
+    "node-fetch": "^2.6.7",
     "swagger-ui-express": "^4.5.0"
   }
 }
